9.jan (ws)
      - show new score dialog when start configured as "start with new score"
6.jan (ws)
      - first code for interval based transposition (incomplete)
      (la)
      - add code for update checking
5.jan (ws)
      - better pitch spelling during note input
      - start with reasonable sized navigator window
      - fix: key signature crash
      - fix: grace note spacing on multi-staves
      - fix: Delete part of tuplet corrupts file
4.jan (ws)
      - do not allow to remove time signature at tick zero.
      (la)
      - add external file to list languages (languages.xml)
3.jan (lv)
      - fix import of Gatti.xml
2.jan.2010 (db)
      - fix magnification steps
      - instruments.xml patch from barichd
31.dec (ws)
      - note tweaking: ontime/offtime properties
30.dec (ws)
      - redesign of navigator panel
      (lv)
      - fix MusicXML export of pedal (broken by r2494 sym.cpp changes)
29.dec (lv)
      - MusicXML support for multiple (beamed/chord) grace notes
      (ws)
      - fix: Full-measure rests from 0.9.4 (Compatibility)
      (db)
      - remove shortcuts for Display > Zoom In and Zoom Out due to conflicts
      - update .ts files
      - fix tempo in inv13.mscx demo
28.dec (ws)
      - new feature: persistent JACK midi connections
      - "save as" for chord style editor
27.dec (ws)
      - first code for chord style editor
      (og)
      exportly: two (and not more than two) standard dynamics on one note.
26.dec (og)
      -exportly: Fixed bug in triplets of chords. Tried to update outdated code on
      keychanges.
24.dec (ws)
      - allow editing of text properties for chord names
23.dec (og)
      Exportly: Flat symbol in instrumentnames are now handled. Some
      progress on reconciling rehearsalmarks and segno/coda-symbols.
22.dec (la)
      - uncomment workaround for set(QT_USE_QTSCRIPTTOOLS TRUE) for ubuntu users
        see http://www.musescore.org/en/node/3475
      (db)