@@ -167,15 +167,6 @@ double Element::spatium() const
       }
 
 //---------------------------------------------------------
-//   pos
-//---------------------------------------------------------
-
-QPointF Element::pos() const
-      {
-      return _pos + _userOff;
-      }
-
-//---------------------------------------------------------
 //   name
 //---------------------------------------------------------
 
