@@ -1,4 +1,7 @@
 9.jan (ws)
+      - Removed shortcut Ctrl+Space for playback since Ctrl+Space is default
+        shortcut of input method in many windows system, mostly multibytes
+        languages in asia.
       - show new score dialog when start configured as "start with new score"
 6.jan (ws)
       - first code for interval based transposition (incomplete)
